--- a/home.html
+++ b/home.html
@@ -20,5 +20,6 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         
         <a-camera gps-camera rotation-reader></a-camera>
+	<a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 77.3665746; latitude: 28.5623893;" animation-mixer/>
 	</a-scene>
 </body>
